# mlir-nki

./: CMakeLists.txt  notes.md
include/: CMakeLists.txt
include/mlir/Dialect/NKI/IR/: NKIDialect.h  NKIDialect.td
include/nki/: CMakeLists.txt  Dialect.h  Ops.td
include/nki/Analysis/: ChannelDependencyAnalysis.h
include/nki/IR/: CMakeLists.txt  NKIDialect.h  NKIDialect.td  NKIOps.h  NKIOps.td
include/nki/Transforms/: CMakeLists.txt  Dialect.h  NKIToPython.h  Ops.td  Passes.h  Passes.td
include/toy/: CMakeLists.txt
lib/: CMakeLists.txt  Dialect.cpp
lib/Conversion/: CMakeLists.txt
lib/Dialect/NKI/: CMakeLists.txt  NKIDialect.cpp
lib/Transforms/: NKIToPython.cpp
lib/nki/Analysis/: CMakeLists.txt  ChannelDependencyAnalysis.cpp
lib/nki/IR/: CMakeLists.txt  NKIDialect.cpp  NKIOps.cpp
lib/nki/Transforms/: CMakeLists.txt  ConvertToNKIPass.cpp  NKILiftLoopsToLinalgPass.cpp  NKILinalgToElementwisePass.cpp  NKIToPython.cpp  NKIToPythonPass.cpp
mlir/: Dialect.cpp
test/nki/: AirLaunchToNKI.mlir  channel_put_get.mlir  herd_to_herd.mlir  multiple_herds.mlir  ops.mlir
tools/: CMakeLists.txt  nki-opt.cpp
